change name indexar to index

--- a/indexen.html
+++ b/indexen.html
@@ -56,7 +56,7 @@
            
             <li class="mt-35"><a href="#Connect">Contact Us</a></li>
 
-            <li class="mt-35" ><a href="indexar.html"  style="margin-top: -0.5rem !important">AR</a></li>
+            <li class="mt-35" ><a href="index.html"  style="margin-top: -0.5rem !important">AR</a></li>
 
             <li>
               <a class="btnAccount  btn-light">
